--- a/scrape_cyzone 创业邦/创业邦.ipynb
+++ b/scrape_cyzone 创业邦/创业邦.ipynb
@@ -6,9 +6,7 @@
    "source": [
     "# 爬取投资事件\n",
     "链接：临时链接(被封了，只有临时链接)：http://webcache.googleusercontent.com/search?q=cache:http://www.cyzone.cn/event/list-764-0-1/\n",
-    "放弃原因：被封IP,无法继续爬\n",
-    "同类项：IT桔子\n",
-    "原因：反爬，10页之后为空"
+    "放弃原因：被封IP,无法继续爬"
    ]
   },
   {
@@ -51,7 +49,10 @@
     }
    ],
    "source": [
-    "Image(filename='content2.png') #IT桔子，爬新公司"
+    "#同类项：IT桔子 链接：http://radar.itjuzi.com/company\n",
+    "Image(filename='content2.png') #IT桔子，爬新公司\n",
+    "\n",
+    "#放弃原因：反爬，10页之后为空"
    ]
   },
   {
