--- a/Twitter selenium/twitter try1.ipynb
+++ b/Twitter selenium/twitter try1.ipynb
@@ -1,127 +1,10 @@
 {
  "cells": [
   {
-   "cell_type": "code",
-   "execution_count": 1,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "# from selenium import webdriver\n",
-    "# from getpass import getpass\n",
-    "\n",
-    "# def login_twitter(username, password):\n",
-    "#     driver = webdriver.Chrome()\n",
-    "#     driver.get(\"https://twitter.com/login\")\n",
-    "\n",
-    "#     username_field = driver.find_element_by_class_name(\"js-username-field\")\n",
-    "#     password_field = driver.find_element_by_class_name(\"js-password-field\")\n",
-    "\n",
-    "#     username_field.send_keys(username)\n",
-    "#     driver.implicitly_wait(1)\n",
-    "    \n",
-    "#     password_field.send_keys(password)\n",
-    "#     driver.implicitly_wait(1)\n",
-    "\n",
-    "#     driver.find_element_by_class_name(\"EdgeButtom--medium\").click()\n",
-    "\n",
-    "\n",
-    "# if __name__ == \"__main__\":\n",
-    "#     username = input(\"user name : \")\n",
-    "#     password = getpass(\"password  : \")\n",
-    "#     login_twitter(username, password)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# from selenium import webdriver\n",
-    "# from getpass import getpass\n",
-    "# from selenium.webdriver.common.by import By\n",
-    "# from selenium.webdriver.support.ui import WebDriverWait\n",
-    "# from selenium.webdriver.support import expected_conditions as EC\n",
-    "# from selenium.common.exceptions import StaleElementReferenceException, TimeoutException\n",
-    "\n",
-    "# from bs4 import BeautifulSoup\n",
-    "# import urllib,sys,requests\n",
-    "\n",
-    "# class wait_for_more_than_n_elements_to_be_present(object):\n",
-    "#     def __init__(self, locator, count):\n",
-    "#         self.locator = locator\n",
-    "#         self.count = count\n",
-    "\n",
-    "#     def __call__(self, driver):\n",
-    "#         try:\n",
-    "#             elements = EC._find_elements(driver, self.locator)\n",
-    "#             return len(elements) > self.count\n",
-    "#         except StaleElementReferenceException:\n",
-    "#             return False\n",
-    "\n",
-    "# driver = webdriver.Chrome()\n",
-    "# driver.get(\"https://twitter.com/login\")\n",
-    "\n",
-    "# username_field = driver.find_element_by_class_name(\"js-username-field\")\n",
-    "# password_field = driver.find_element_by_class_name(\"js-password-field\")\n",
-    "\n",
-    "# username_field.send_keys(username)\n",
-    "# driver.implicitly_wait(1)\n",
-    "\n",
-    "# password_field.send_keys(password)\n",
-    "# driver.implicitly_wait(1)\n",
-    "\n",
-    "# driver.find_element_by_class_name(\"EdgeButtom--medium\").click()\n",
-    "\n",
-    "# box = WebDriverWait(driver, 10).until(EC.presence_of_element_located((By.NAME, \"q\")))\n",
-    "\n",
-    "# # find the search box in the html:\n",
-    "# driver.find_element_by_name(\"q\").clear()\n",
-    "\n",
-    "# # enter your search string in the search box:\n",
-    "# box.send_keys('Mangkhut')\n",
-    "\n",
-    "# # submit the query (like hitting return):\n",
-    "# box.submit()\n",
-    "\n",
-    "# # initial wait for the search results to load\n",
-    "# wait = WebDriverWait(driver, 10)\n",
-    "\n",
-    "# # wait until the first search result is found. Search results will be tweets, which are html list items and have the class='data-item-id':\n",
-    "# wait.until(EC.visibility_of_element_located((By.CSS_SELECTOR, \"li[data-item-id]\")))\n",
-    "\n",
-    "# try:\n",
-    "#     # wait until the first search result is found. Search results will be tweets, which are html list items and have the class='data-item-id':\n",
-    "#     wait.until(EC.visibility_of_element_located((By.CSS_SELECTOR, \"li[data-item-id]\")))\n",
-    "\n",
-    "#     # scroll down to the last tweet until there are no more tweets:\n",
-    "#     while True:\n",
-    "\n",
-    "#         # extract all the tweets:\n",
-    "#         tweets = driver.find_elements_by_css_selector(\"li[data-item-id]\")\n",
-    "\n",
-    "#         # find number of visible tweets:\n",
-    "#         number_of_tweets = len(tweets)\n",
-    "\n",
-    "#         # keep scrolling:\n",
-    "#         driver.execute_script(\"arguments[0].scrollIntoView();\", tweets[-1])\n",
-    "\n",
-    "#         try:\n",
-    "#             # wait for more tweets to be visible:\n",
-    "#             wait.until(wait_for_more_than_n_elements_to_be_present(\n",
-    "#                 (By.CSS_SELECTOR, \"li[data-item-id]\"), number_of_tweets))\n",
-    "\n",
-    "#         except TimeoutException:\n",
-    "#             # if no more are visible the \"wait.until\" call will timeout. Catch the exception and exit the while loop:\n",
-    "#             break\n",
-    "\n",
-    "#     # extract the html for the whole lot:\n",
-    "#     page_source = driver.page_source\n",
-    "#     driver.close()\n",
-    "# except TimeoutException:\n",
-    " \n",
-    "#         # if there are no search results then the \"wait.until\" call in the first \"try\" statement will never happen and it will time out. So we catch that exception and return no html.\n",
-    "#         page_source=None"
+    "### Scrape tweets by key word searching `Mangkhut`('山竹')"
    ]
   },
   {
