--- a/weibo_scraper/Weibo-scraper.ipynb
+++ b/weibo_scraper/Weibo-scraper.ipynb
@@ -143,13 +143,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
     "def execute_times(times):\n",
     "    for i in range(times + 1):\n",
-    "        browser.execute_script(\"window.scrollTo(0, document.body.scrollHeight);\")\n",
+    "        browser.execute_script(\"window.scrollTo(0, document.body.scrollHeight-200);\")\n",
     "        time.sleep(5)"
    ]
   },
