--- a/text-mining-test/mining.ipynb
+++ b/text-mining-test/mining.ipynb
@@ -83,13 +83,13 @@
     "## 3. Sentiment Analysis\n",
     "### 3.1. Sentiment analysis with SnowNLP\n",
     "#### 3.1.1. Predict comments sentiment in video - level\n",
-    "#### Predict comments sentiment in channel - level\n",
-    "#### Correlaion analysis between sentiment and views in video - level\n",
-    "#### Correlaion analysis between sentiment and views in video - level\n",
-    "### Sentiment analysis with Model training: RNN-Embedding-BiLSTM-LSTM\n",
-    "### Compare performance with SnowNLP and LSTM\n",
-    "## Insights and recommendations\n",
-    "## Next step"
+    "#### 3.1.2. Predict comments sentiment in channel - level\n",
+    "#### 3.1.3. Correlaion analysis between sentiment and views in video - level\n",
+    "#### 3.1.4. Correlaion analysis between sentiment and views in video - level\n",
+    "### 3.2. Sentiment analysis with Model training: RNN-Embedding-BiLSTM-LSTM\n",
+    "### 3.3. Compare performance with SnowNLP and LSTM\n",
+    "## 4. Insights and recommendations\n",
+    "## 5. Next step"
    ]
   },
   {
@@ -558,7 +558,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 392,
+   "execution_count": 396,
    "metadata": {},
    "outputs": [
     {
@@ -575,10 +575,10 @@
        "        "
       ],
       "text/plain": [
-       "<IPython.lib.display.IFrame at 0x173348400>"
+       "<IPython.lib.display.IFrame at 0x1733489b0>"
       ]
      },
-     "execution_count": 392,
+     "execution_count": 396,
      "metadata": {},
      "output_type": "execute_result"
     }
