--- a/text-mining-test/text-mining.ipynb
+++ b/text-mining-test/text-mining.ipynb
@@ -77,7 +77,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "This notebook is about the text analysis of data \"csrp data science challenge.xlsx\".  The aim is to get insights from the data so that recommendations and suggestions can be provide to the channels and their video content, Its also the chance to let content providers know about their viewers' portrait. All analysis is done by Python programming, and the methods including Time series, descriptive statistics analysis, text analysis, topic modeling and sentiment modeling. Note that bias is not into consideration due to the data has been already given. \n",
+    "This notebook is about the text analysis of data \"csrp data science challenge.xlsx\".  The aim is to get insights from the data so that recommendations and suggestions can be provide to the channels and their video content, Its also the chance to let content providers know about their viewers' portrait. All analysis is done by Python programming, and the methods including Time series, descriptive statistics analysis, text analysis, topic modeling and sentiment modeling with Recurrent Neural Network, LSTM. Note that bias is not into consideration due to the data has been already given. \n",
     "\n",
     "The following are some most important insights and recommendations.\n",
     "\n",
