--- a/text-mining-test/text-mining.ipynb
+++ b/text-mining-test/text-mining.ipynb
@@ -83,11 +83,13 @@
     "\n",
     "1.  People are enjoying watching more and more videos(without comparing with other entertaining ways). Keep update videos, more videos, more likely to get more views.\n",
     "2. Generally, channels should publish more content related to the topic(Music and show)  to gain more views.\n",
-    "3.  If you want to make the viral video, topic(music and show) is your choice, if you want to be a consistent youtuber or content provider, topic(political related)  shares the similar views with the topic(music and show) on average video.\n",
+    "3.  If you want to make the viral video, topic(Music, show and education) is your choice, if you want to be a consistent youtuber or content provider, topic(political related) shares the similar views with the topic(Music, show and education) on average video.\n",
     "4.  If you want to get more views, you should generally be a positive content provider. Negative comments on channel level are more likely related to low views.\n",
     "\n",
     "There are still many things can be improved and further discussed, including Building our own corpus,\n",
-    "Hong Kong traditional Chinese words segmentation library, enrich data, etc. For the next step details, please refer to the last chapters."
+    "Hong Kong traditional Chinese words segmentation library, enrich data, etc. For the next step details, please refer to the last chapters.\n",
+    "\n",
+    "Finally, enjoy the report, Cheers 🙌🏼."
    ]
   },
   {
@@ -156,6 +158,31 @@
    "outputs": [],
    "source": [
     "df1 = pd.read_excel('csrp data science challenge.xlsx', index_col=0,sheet_name=0)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    " "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    " "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 1. Exploratory analysis for general information"
    ]
   },
   {
@@ -387,13 +414,6 @@
    "outputs": [],
    "source": [
     "df2.head()"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## 1. Exploratory analysis for general information"
    ]
   },
   {
@@ -664,7 +684,7 @@
    "metadata": {},
    "source": [
     "### 1.3. Persistence: what are the most active channels\n",
-    "The most active channels are basically all from news or news reviews channel, even though they process a lot of videos, but only three of them make to the list of top viewed channels "
+    "The most active channels are basically all from news or news reviews channel, even though they posted a lot of videos, but only three of them make to the list of top viewed channels. "
    ]
   },
   {
@@ -716,9 +736,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 1.4. Words frequency and Word cloud\n",
-    "\n",
-    "#### Merge two table into one"
+    "### 1.4. Words frequency and Word cloud"
    ]
   },
   {
@@ -1145,7 +1163,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 187,
+   "execution_count": 434,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1162,7 +1180,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 188,
+   "execution_count": 435,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1182,7 +1200,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 436,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1237,16 +1255,16 @@
    "metadata": {},
    "source": [
     "The following are the top 5 topics about the aggregation of the comments on **video level**. We can see that:\n",
-    "* Topic 0 is about taiwan and regional issues\n",
+    "* Topic 0 is about taiwan and music\n",
     "* Topic 1 is about politics and China\n",
     "* Topic 2 is about Hong Kong and film\n",
-    "* Topic 3 is about Music and show\n",
+    "* Topic 3 is about show amd education\n",
     "* Topic 4 is also about the politics, but in a more nagetive way, you can see people are arguing with each other by the words 包子， 五毛"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 193,
+   "execution_count": 439,
    "metadata": {},
    "outputs": [
     {
@@ -1286,7 +1304,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The following are the visualization of the top 5 topics. topic about politics and China is the most dominant one.\n",
+    "The following are the visualization of the top 5 topics.\n",
+    "\n",
     "* Note that the topic number is not the same as the above. But you can click each circle to see which topic it is\n",
     "* The area of circle represents the importance of each topic over the entire corpus, the larger the circle is, the more important this topic is\n",
     "* The distance between the center of circles indicate the similarity between topics."
@@ -1294,7 +1313,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 368,
+   "execution_count": 440,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1307,7 +1326,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 378,
+   "execution_count": 441,
    "metadata": {},
    "outputs": [
     {
@@ -1324,10 +1343,10 @@
        "        "
       ],
       "text/plain": [
-       "<IPython.lib.display.IFrame at 0x17335f4a8>"
+       "<IPython.lib.display.IFrame at 0x17335fb00>"
       ]
      },
-     "execution_count": 378,
+     "execution_count": 441,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1338,7 +1357,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 195,
+   "execution_count": 442,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1364,7 +1383,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 197,
+   "execution_count": 443,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1391,12 +1410,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "From the following topic distributions in video level, the following are the topic counts in 3545 videos, except the comments that are too short to be classified, we can see that the topics are distributed evenly, and topic 3 (Music and show) is the relatively dominant topic "
+    "From the following topic distributions in video level, the following are the topic counts in 3545 videos, except the comments that are too short to be classified, we can see that the topics are distributed evenly, and topic 3 (education and show) is the relatively dominant topic "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 385,
+   "execution_count": 444,
    "metadata": {},
    "outputs": [
     {
@@ -1418,7 +1437,7 @@
        "Name: topic, dtype: int64"
       ]
      },
-     "execution_count": 385,
+     "execution_count": 444,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1430,7 +1449,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 200,
+   "execution_count": 445,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1448,12 +1467,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "After I sort the video-level data by **viewCount** from the highest to lowest, we can found out half of the top 10 most viewed video are the topic 3(Music and show), which may illustrate that people are more likely to watch videos in this topic(**not considering the sample data bias**)"
+    "After I sort the video-level data by **viewCount** from the highest to lowest, we can found out half of the top 10 most viewed video are the topic 0(Music and taiwan), which may illustrate that people are more likely to watch videos in this topic(**not considering the sample data bias**)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 201,
+   "execution_count": 446,
    "metadata": {},
    "outputs": [
     {
@@ -1618,7 +1637,7 @@
        "2853                                  0  "
       ]
      },
-     "execution_count": 201,
+     "execution_count": 446,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1704,7 +1723,7 @@
     "* Topic 0 is about political issues in China and Taiwan\n",
     "* Topic 1 is about Hong Kong and film \n",
     "* Topic 2 is about People thoughts about the show and song\n",
-    "* Topic 3 is about Music and show\n",
+    "* Topic 3 is about Music and show and education\n",
     "* Topic 4 is video and game etc\n",
     "\n",
     "The topic 2 and three are similar, this may be explained by the fact that in channel level, the comments are highly concentrated in one topic and similar"
@@ -1831,7 +1850,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We can see that more than half of them cannot be classified due to the lack of information. And topic 3(Music and show) is still the dominant topic in channel level."
+    "We can see that more than half of them cannot be classified due to the lack of information. And topic 3(Music and show and education) is the dominant topic in channel level."
    ]
   },
   {
@@ -1895,7 +1914,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "In channel level, topic 3 (Music and show) is also the topic with most viewed in top videos."
+    "In channel level, topic 3 (Music, show and education) is also the topic with most viewed in top videos."
    ]
   },
   {
@@ -2269,7 +2288,7 @@
    "metadata": {},
    "source": [
     "From all above, we can Conclude: \n",
-    "* Topic3(music and show) are the dominant topic in both video level and channel level.\n",
+    "* Topic3(music, show and education) are the dominant topic in both video level and channel level.\n",
     "* In the top 10 viewed video, 50% of them are also topic 3, indicating people love watching this kind of content more than other topics.\n",
     "* However, regard to the average view of each topic, the topic0(political issues in China and Taiwan) and topic3 are evry close, which means that topic3 is more likely to go viral, and topic0 are more stable.\n",
     "* Topic0(politics about China and Taiwan) has more attractive for people to comment, see the average length of each topic.\n",
@@ -2419,7 +2438,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 3.1. Sentiment analysis with [SnowNLP](https://github.com/isnowfy/snownlp) "
+    "### 3.1. Sentiment analysis with SnowNLP\n",
+    "\n",
+    "For the introduction about SnowNLP, please refer [here](https://github.com/isnowfy/snownlp) "
    ]
   },
   {
@@ -2594,7 +2615,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We can see that, in video level, the pearson correlation value between sentiment and viewcount is 0.025, which means there is weak correlation between them. "
+    "After I test several data, I found out that SnowNLP performs good in short text, but bad in the long text. Moreover, in video level, the pearson correlation value between sentiment of each comments and viewcount is only 0.025, which means there is weak correlation between them. "
    ]
   },
   {
@@ -2758,7 +2779,7 @@
    "source": [
     "### 3.2. Sentiment analysis with tensorflow: [RNN-Embedding-BiLSTM-LSTM](https://www.tensorflow.org/tutorials/sequences/recurrent)\n",
     "\n",
-    "Reasons: Considering good performance and widely acknowledged in both industry and research fields\n",
+    "Reasons: Considering good performance and widely acknowledged in both industry and research fields.\n",
     "\n",
     "Train Corpus: [谭松波语料](http://www.unopencity.com/project/data-detail/29/), 7000 postive, 3000 negative\n",
     "\n",
@@ -3352,7 +3373,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "This is how data looks like after adding the two sentiments.\n",
+    "After I use the model just trained to predict the comments sentiments, this is how new data looks like after adding the two sentiments.\n",
     "* The sentiment1 is done by Snownlp\n",
     "* The sentiment2 is done by the model we trained\n",
     "\n",
@@ -3818,13 +3839,13 @@
     "\n",
     "1. From the time trend analysis of general information, we can see that people are enjoying watching more and more videos(without comparing with other entertaining ways). So the recommendation here for channels is to **keep update videos, more videos, more likely to get more views.**\n",
     "\n",
-    "2. The channel of most viewed are the channels related to music, show, the news channel has relatively low views compared to the prior two. So, if you are going to open a politically youtube channel, you should consider carefully.\n",
+    "2. The channel of most viewed are the channels related to music, show, and education. The news channel has relatively low views compared to the prior two. So, if you are going to open a politically youtube channel, you should consider carefully.\n",
     "\n",
     "3. From the Words frequency analysis, we can see that political related comments cover most in the whole, which might be a sign that people are more willing to share their politic opinion in the sample videos. But another reason might be people from different regions are just arguing with each other... This can be further analyzed later.\n",
     "\n",
-    "4. From the topic modeling, we can see that Topic 3 (Music and show) are the dominant topic in both video level and channel level. It is also the topic with the most viewed topic. So **generally, channels should publish more content related to this topic to gain more views.**\n",
+    "4. From the topic modeling, we can see that Topic 3 (Music, show and education) are the dominant topic in both video level and channel level. It is also the topic with the most viewed topic. So **generally, channels should publish more content related to this topic to gain more views.**\n",
     "\n",
-    "5. However, regard to average view of each topic, the topic(political related) and topic(music and show) are very close, which means that topic(music and show) are more likely to go viral, and topic(political related) is more stable. So **if you want to make viral videos, topic(music and show) is your choice, if you want to be a consistent youtuber or content provider, topic(political related) is also a good choice.**\n",
+    "5. However, regard to average view of each topic, the topic(political related) and topic(music ,show and education) are very close, which means that topic(music ,show and education) are more likely to go viral, and topic(political related) is more stable. So **if you want to make viral videos, topic(music ,show and education) is your choice, if you want to be a consistent youtuber or content provider, topic(political related) is also a good choice.**\n",
     "\n",
     "6. Do positive comments have more views? In channel level,yes! **If you want to get more views, you should generally be a positive content provider.**"
    ]
