--- a/text-mining-test/text-mining.ipynb
+++ b/text-mining-test/text-mining.ipynb
@@ -1726,7 +1726,7 @@
     "* Topic 3 is about Music and show and education\n",
     "* Topic 4 is video and game etc\n",
     "\n",
-    "The topic 2 and three are similar, this may be explained by the fact that in channel level, the comments are highly concentrated in one topic and similar"
+    "The topic 2 and 3 are similar, this may be explained by the fact that in channel level, the comments are highly concentrated in one topic and similar"
    ]
   },
   {
@@ -2440,7 +2440,7 @@
    "source": [
     "### 3.1. Sentiment analysis with SnowNLP\n",
     "\n",
-    "For the introduction about SnowNLP, please refer [here](https://github.com/isnowfy/snownlp) "
+    "For the introduction about SnowNLP, please refer [here](https://github.com/isnowfy/snownlp). "
    ]
   },
   {
@@ -2483,7 +2483,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "SnowNLP can help us calculate the sentiment, and the results is as follows"
+    "SnowNLP can help us calculate the sentiment, and the results is as follows:"
    ]
   },
   {
