--- a/text-mining-test/text-mining-final.ipynb
+++ b/text-mining-test/text-mining-final.ipynb
@@ -63,7 +63,8 @@
    "source": [
     "**Note:**\n",
     "* If you want to change the notebook mode to view the source code, please click the above link.\n",
-    "* All the graphs/charts(except the word cloud) are interactive, you can click the charts to view more details. "
+    "* All the graphs/charts(except the word cloud) are interactive, you can click the charts to view more details. \n",
+    "* The graphs cannot be scrolled in mobile end, for mobile, please refer to the pdf version."
    ]
   },
   {
@@ -98,32 +99,32 @@
    "source": [
     "## Table of content\n",
     "\n",
-    "## 1. Exploratory analysis for general information\n",
-    "### 1.1. Time seires \n",
-    "#### 1.1.1. Year trend with video count\n",
-    "#### 1.1.2. Year trend with video views\n",
-    "### 1.2. Prevalence: what are the most viewed channels\n",
-    "### 1.3. Persistence: what are the most active channels\n",
-    "### 1.4. Words frequency and Word cloud\n",
-    "## 2. Topic Modeling - LDA\n",
-    "### 2.1. Video Level\n",
-    "#### 2.1.1. Top 5 models in video level and visualization\n",
-    "#### 2.1.2. Classify every video into 5 topics \n",
-    "#### 2.1.3. Compare view performance with each topic\n",
-    "### 2.2. Channel Level\n",
-    "#### 2.2.1. Top 5 models in channel level and visualization\n",
-    "#### 2.2.2. Classify every channel into 5 topics\n",
-    "#### 2.2.3. Compare view performance with each topic\n",
-    "### 2.3. Optimize the model - Choosing Optimal LDA Model\n",
-    "### 2.4. Brief summary\n",
-    "## 3. Sentiment Analysis\n",
-    "### 3.1. Sentiment analysis with SnowNLP\n",
-    "#### 3.1.1. Predict comments sentiment in video - level\n",
-    "#### 3.1.2. Predict comments sentiment in channel - level\n",
-    "### 3.2. Sentiment analysis with tensorflow: RNN-Embedding-BiLSTM-LSTM\n",
-    "### 3.3. Compare performance with SnowNLP and LSTM\n",
-    "## 4. Insights and recommendations\n",
-    "## 5. Next step"
+    "1. Exploratory analysis for general information<br> \n",
+    "1.1. Time seires<br> \n",
+    "1.1.1. Year trend with video count<br> \n",
+    "1.1.2. Year trend with video views<br> \n",
+    "1.2. Prevalence: what are the most viewed channels<br> \n",
+    "1.3. Persistence: what are the most active channels<br>\n",
+    "1.4. Words frequency and Word cloud<br>\n",
+    "2. Topic Modeling - LDA<br>\n",
+    "2.1. Video Level<br>\n",
+    "2.1.1. Top 5 models in video level and visualization<br>\n",
+    "2.1.2. Classify every video into 5 topics<br> \n",
+    "2.1.3. Compare view performance with each topic<br>\n",
+    "2.2. Channel Level<br>\n",
+    "2.2.1. Top 5 models in channel level and visualization<br>\n",
+    "2.2.2. Classify every channel into 5 topics<br>\n",
+    "2.2.3. Compare view performance with each topic<br>\n",
+    "2.3. Optimize the model - Choosing Optimal LDA Model<br>\n",
+    "2.4. Brief summary<br>\n",
+    "3. Sentiment Analysis<br>\n",
+    "3.1. Sentiment analysis with SnowNLP<br>\n",
+    "3.1.1. Predict comments sentiment in video - level<br>\n",
+    "3.1.2. Predict comments sentiment in channel - level<br>\n",
+    "3.2. Sentiment analysis with tensorflow: RNN-Embedding-BiLSTM-LSTM<br>\n",
+    "3.3. Compare performance with SnowNLP and LSTM<br>\n",
+    "4. Insights and recommendations<br>\n",
+    "5. Next step"
    ]
   },
   {
@@ -1326,7 +1327,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 441,
+   "execution_count": 453,
    "metadata": {},
    "outputs": [
     {
@@ -1343,10 +1344,10 @@
        "        "
       ],
       "text/plain": [
-       "<IPython.lib.display.IFrame at 0x17335fb00>"
+       "<IPython.lib.display.IFrame at 0x1234dd9e8>"
       ]
      },
-     "execution_count": 441,
+     "execution_count": 453,
      "metadata": {},
      "output_type": "execute_result"
     }
